# project-maker

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: deck.yaml  project-with-deck.yaml  project.yaml  proposal.md  proposal.yaml  quote.yaml  timeline.yaml
examples/themes/: corporate.yaml
src/deck_maker/: cli.py
src/deck_maker/core/: __init__.py  images.py  models.py  parser.py  prompt_builder.py  renderer.py  validator.py  wizard_prompt.py
src/file_converter/: __main__.py  cli.py
src/file_converter/core/: converters.py
src/pdf_to_png/: __main__.py  cli.py
src/pdf_to_png/core/: __init__.py  converter.py  models.py  scanner.py  validator.py
src/project_maker/: __main__.py  cli.py
src/project_maker/core/: __init__.py  models.py  orchestrator.py  parser.py  prompt_builder.py  validator.py  wizard_prompt.py
src/proposal_maker/: __main__.py  cli.py
src/proposal_maker/core/: __init__.py  docx_ext.py  md_images.py  md_inline.py  md_to_yaml.py  mermaid.py  models.py  parser.py  pdf.py  prompt_builder.py  renderer.py  table_shorthand.py  theme.py  validator.py  wizard_prompt.py
src/quote_maker/: __main__.py  cli.py
src/quote_maker/core/: __init__.py  calculator.py  models.py  parser.py  prompt_builder.py  rate_bands.py  renderer.py  validator.py  wizard_prompt.py
src/quote_maker/data/: __init__.py  default_rate_bands.yaml
src/shared/: __init__.py
src/shared/prompt/: __init__.py  io.py  wizard.py
src/shared/schemas/: __init__.py  common.py
src/shared/utils/: __init__.py  files.py  yaml_io.py
src/suite_gui/: __init__.py  __main__.py  app.py  jobs.py  main_frame.py
src/timeline_maker/: __main__.py  cli.py
src/timeline_maker/core/: __init__.py  generator.py  models.py  parser.py  prompt_builder.py  validator.py  wizard_prompt.py
tests/: test_deck_maker.py  test_pdf_to_png.py  test_project_orchestrator.py  test_project_orchestrator_deck.py  test_project_prompt_cli.py  test_proposal_md_parser.py  test_proposal_md_renderer.py  test_proposal_mermaid_scale.py  test_proposal_prompt_cli.py  test_proposal_smoke.py  test_proposal_table_yaml.py  test_quote_calculator.py  test_quote_prompt_cli.py  test_quote_rate_bands.py  test_quote_xlsx_formulas.py  test_suite_gui_jobs.py  test_timeline_prompt_cli.py  test_timeline_smoke.py
